--- a/estilos/style.css
+++ b/estilos/style.css
@@ -56,7 +56,17 @@ li {
 }
 
 li img {
+    position: relative;
+    top: 0;
+    left: 0;
     width: 50%;
     border-radius: 50%;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.466);
+    transition-duration: 0.3s;
+}
+
+li img:hover {
+    border: 1px solid white;
+    top: -5px;
+    left: -5px;
 }
