--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,8 +39,8 @@ section {
 }
 
 #menu {
-    width: 100px;
-    height: 500px;
+    width: 120px;
+    height: 700px;
     right: 0;
 }
 
@@ -50,22 +50,21 @@ ul {
 }
 
 li {
-    text-align: center;
-    margin: 15px 0;
+    text-align: right;
+    margin: 10px 10px 20px 0;
 }
 
 li img {
     position: relative;
-    top: 0;
-    left: 0;
     width: 50%;
     border-radius: 50%;
+    box-sizing: border-box;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.466);
-    transition-duration: 0.3s;
 }
 
 li img:hover {
-    border: 1px solid white;
-    top: -5px;
-    left: -5px;
+    border: 2px solid rgba(255, 255, 255, 0.664);
+    transform: translate(-5px,-5px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.466);
+    transition: transform .3s, border 1s;
 }
