--- a/estilos/social.css
+++ b/estilos/social.css
@@ -10,6 +10,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
 main img {
     width: 100%;
 }
